updated to support .net5 routing

--- a/example/BlazorTenant.Example/wwwroot/index.html
+++ b/example/BlazorTenant.Example/wwwroot/index.html
@@ -8,10 +8,11 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="BlazorTenant.Example.styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <app>Loading...</app>
+    <app id="#app">Loading...</app>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
